@@ -18,10 +18,16 @@
 package cz.cvut.kbss.jopa.query.mapper;
 
 import cz.cvut.kbss.jopa.exception.SparqlResultMappingException;
+import cz.cvut.kbss.jopa.model.LoadState;
 import cz.cvut.kbss.jopa.model.descriptors.EntityDescriptor;
 import cz.cvut.kbss.jopa.model.lifecycle.PostLoadInvoker;
 import cz.cvut.kbss.jopa.model.metamodel.EntityType;
-import cz.cvut.kbss.jopa.sessions.UnitOfWorkImpl;
+import cz.cvut.kbss.jopa.model.metamodel.FieldSpecification;
+import cz.cvut.kbss.jopa.model.metamodel.IdentifiableEntityType;
+import cz.cvut.kbss.jopa.sessions.descriptor.LoadStateDescriptor;
+import cz.cvut.kbss.jopa.sessions.descriptor.LoadStateDescriptorFactory;
+import cz.cvut.kbss.jopa.sessions.util.CloneRegistrationDescriptor;
+import cz.cvut.kbss.jopa.sessions.UnitOfWork;
 import cz.cvut.kbss.jopa.utils.ReflectionUtils;
 import cz.cvut.kbss.ontodriver.iteration.ResultRow;
 
@@ -34,11 +40,11 @@ import java.util.List;
  */
 class EntityResultMapper<T> implements SparqlResultMapper {
 
-    private final EntityType<T> et;
+    private final IdentifiableEntityType<T> et;
 
     private final List<FieldResultMapper> fieldMappers = new ArrayList<>();
 
-    EntityResultMapper(EntityType<T> et) {
+    EntityResultMapper(IdentifiableEntityType<T> et) {
         this.et = et;
     }
 
@@ -55,12 +61,17 @@ class EntityResultMapper<T> implements SparqlResultMapper {
     }
 
     @Override
-    public T map(ResultRow resultRow, UnitOfWorkImpl uow) {
+    public T map(ResultRow resultRow, UnitOfWork uow) {
         try {
             final T instance = ReflectionUtils.instantiateUsingDefaultConstructor(et.getJavaType());
-            fieldMappers.forEach(m -> m.map(resultRow, instance, uow));
-            return (T) uow.registerExistingObject(instance, new EntityDescriptor(),
-                    Collections.singletonList(new PostLoadInvoker(uow.getMetamodel())));
+            final LoadStateDescriptor<T> loadStateDescriptor = LoadStateDescriptorFactory.createAllUnknown(instance, et);
+            fieldMappers.forEach(m -> {
+                m.map(resultRow, instance, uow);
+                loadStateDescriptor.setLoaded((FieldSpecification<? super T, ?>) m.getFieldSpecification(), LoadState.LOADED);
+            });
+            uow.getLoadStateRegistry().put(instance, loadStateDescriptor);
+            return et.getJavaType()
+                     .cast(uow.registerExistingObject(instance, new CloneRegistrationDescriptor(new EntityDescriptor()).postCloneHandlers(List.of(new PostLoadInvoker(uow.getMetamodel())))));
         } catch (cz.cvut.kbss.jopa.exception.InstantiationException e) {
             // This is not expected, since an entity class must have a public no-arg constructor
             throw new SparqlResultMappingException(e);
