@@ -24,13 +24,14 @@ import cz.cvut.kbss.ontodriver.model.Axiom;
 import org.apache.jena.rdf.model.Property;
 import org.apache.jena.rdf.model.Resource;
 import org.apache.jena.rdf.model.Statement;
+import org.apache.jena.vocabulary.RDF;
 
 import java.net.URI;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 import static org.apache.jena.rdf.model.ResourceFactory.createProperty;
 import static org.apache.jena.rdf.model.ResourceFactory.createResource;
@@ -74,7 +75,14 @@ public class ReferencedListHandler {
                     appendNode(lastNode, descriptor.getValues().get(i), i == 0 ? hasList : hasNext, hasContent, context,
                             toAdd, descriptor, i);
         }
-        connector.add(toAdd, context);
+        if (i > 0) {
+            createNilTerminal(lastNode, hasNext, descriptor).ifPresent(toAdd::add);
+            connector.add(toAdd, context);
+        }
+    }
+
+    private void removePreviousNilTerminal(Resource lastNode, Property hasNext, String context) {
+        connector.remove(lastNode, hasNext, RDF.nil, context);
     }
 
     private <V> Resource appendNode(Resource previousNode, V value, Property link, Property hasContent,
@@ -84,7 +92,7 @@ public class ReferencedListHandler {
         statements.add(createStatement(previousNode, link, node));
         statements.addAll(ReferencedListHelper.toRdfNodes(value, descriptor.getNodeContent())
                                               .map(n -> createStatement(node, hasContent, n))
-                                              .collect(Collectors.toList()));
+                                              .toList());
         return node;
     }
 
@@ -99,27 +107,38 @@ public class ReferencedListHandler {
         return node;
     }
 
+    private Optional<Statement> createNilTerminal(Resource lastNode, Property hasNext,
+                                                  ReferencedListDescriptor descriptor) {
+        return descriptor.isTerminatedByNil() ? Optional.of(createStatement(lastNode, hasNext, RDF.nil)) : Optional.empty();
+    }
+
     <V> void updateList(ReferencedListValueDescriptor<V> descriptor) {
         final ReferencedListIterator<V> it = new ReferencedListIterator<>(descriptor, connector);
         int i = 0;
+        Resource lastNode = it.getCurrentNode();
         while (it.hasNext() && i < descriptor.getValues().size()) {
             final V update = descriptor.getValues().get(i);
             final V existing = it.nextValue();
             if (!existing.equals(update)) {
                 it.replace(update);
             }
+            lastNode = it.getCurrentNode();
             i++;
         }
-        removeObsoleteNodes(it);
-        if (i < descriptor.getValues().size()) {
-            appendNewNodes(descriptor, i, it.getCurrentNode());
-        }
+        removeObsoleteNodes(it, descriptor.isTerminatedByNil());
+        assert lastNode != null;
+        appendNewNodes(descriptor, i, lastNode);
     }
 
-    private static void removeObsoleteNodes(ReferencedListIterator<?> it) {
+    private void removeObsoleteNodes(ReferencedListIterator<?> it, boolean removeNilTerminal) {
+        Resource lastNode = it.getCurrentNode();
         while (it.hasNext()) {
             it.nextValue();
+            lastNode = it.getCurrentNode();
             it.removeWithoutReconnect();
+        }
+        if (removeNilTerminal) {
+            removePreviousNilTerminal(lastNode, it.hasNextProperty, it.context);
         }
     }
 }
